--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -1,7 +1,7 @@
 name: Performance
 
 on:
-  pull_request:
+  pull_request_target:
     paths:
       - client/src/**
       - .github/workflows/performance.yml
