--- a/deployer/pyproject.toml
+++ b/deployer/pyproject.toml
@@ -16,6 +16,7 @@ requests = {extras = ["security"], version = "^2.25.0"}
 elasticsearch-dsl = "^7.3.0"
 selectolax = "^0.2.11"
 PyGithub = "^1.55"
+unidiff = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.4b2"
