--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prettier-format": "prettier --write .",
     "start": "(test -f client/build/index.html || yarn build:client) && (test -f ssr/dist/main.js || yarn build:ssr) && (test -d client/build/en-us/_spas || yarn tool spas) && nf -j Procfile.start start",
     "start:client": "cd client && cross-env BROWSER=none PORT=3000 react-scripts start",
-    "start:dev-server": "nodemon server --watch server --watch build --watch content --watch kumascript --ext js --watch ssr/dist",
+    "start:dev-server": "node-dev server",
     "start:server": "node server",
     "start:static-server": "cross-env ENV_FILE=testing/.env node server/static.js",
     "test": "yarn prettier-check && yarn test:client && yarn test:kumascript && yarn test:content && yarn test:testing",
@@ -138,7 +138,7 @@
     "jest-junit-reporter": "^1.1.0",
     "jest-puppeteer": "5.0.3",
     "jsdom": "^16.5.3",
-    "nodemon": "2.0.7",
+    "node-dev": "7.0.0",
     "pegjs": "^0.10.0",
     "prettier": "2.3.0",
     "prettier-plugin-packagejson": "^2.2.11",
