--- a/deployer/aws-lambda/content-origin-request/package.json
+++ b/deployer/aws-lambda/content-origin-request/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "@yari-internal/content-origin-request",
+  "version": "0.0.1",
   "private": true,
   "description": "Defines the deployment package for this AWS Lambda function.",
   "license": "MPL-2.0",
