--- a/.github/workflows/aws-lambda.yml
+++ b/.github/workflows/aws-lambda.yml
@@ -49,7 +49,7 @@ jobs:
           curl -I http://localhost:7000/docs/Web
           curl -I http://localhost:7000/en-US/docs/Web/
 
-      - name: Unit test
+      - name: End-to-end test
         working-directory: deployer/aws-lambda/content-lambda
         run: |
           yarn test-server
