--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "4.0.3",
+    "react-timing-hooks": "2.0.0",
     "rough-notation": "0.5.1",
     "sass": "^1.32.13",
     "stylelint": "^13.13.1",
