--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -110,6 +110,11 @@ jobs:
           echo "log_each_successful_upload: ${{ github.event.inputs.log_each_successful_upload }}"
           echo "deployment_prefix: ${{ github.event.inputs.deployment_prefix }}"
 
+      - name: Fetch and load latest popularities.json
+        env:
+          CONTENT_ROOT: ${{ github.workspace }}/mdn/content/files
+        run: yarn tool popularities
+
       - name: Build everything
         env:
           # Remember, the mdn/content repo got cloned into `pwd` into a
