--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "filecheck": "cd filecheck && node cli.js",
     "fiori:build": "cd client && build-storybook",
     "fiori:start": "cd client && start-storybook -p 6006",
-    "md": "node markdown/cli.js",
+    "md": "ts-node markdown/cli.ts",
     "prepare-build": "yarn build:client && yarn build:ssr && yarn tool optimize-client-build && yarn tool google-analytics-code && yarn tool spas && yarn tool gather-git-history",
     "prettier-check": "prettier --check .",
     "prettier-format": "prettier --write .",
@@ -113,7 +113,9 @@
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.8",
     "@testing-library/react": "^11.2.6",
+    "@types/hast": "^2.3.1",
     "@types/jest": "^26.0.23",
+    "@types/mdast": "^3.0.3",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.4",
     "babel-loader": "8.1.0",
@@ -167,6 +169,7 @@
     "stylelint-scss": "^3.19.0",
     "swr": "^0.5.6",
     "ts-loader": "^8.1.0",
+    "ts-node": "^10.0.0",
     "typescript": "^4.2.4",
     "use-debounce": "^6.0.1",
     "webpack": "^4.44.2",
