--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "cookie": "0.4.1",
     "cookie-parser": "1.4.5",
     "cssesc": "^3.0.0",
+    "dayjs": "1.10.4",
     "dotenv": "10.0.0",
     "ejs": "3.1.6",
     "express": "4.17.1",
