--- a/markdown/tsconfig.json
+++ b/markdown/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "target": "es2019",
+    "lib": ["esnext"],
     "skipLibCheck": true,
     "moduleResolution": "node"
   },
