--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "open": "^8.2.0",
     "open-editor": "3.0.0",
     "prismjs": "1.23.0",
+    "react-modal": "^3.13.1",
     "read-chunk": "3.2.0",
     "rehype-format": "^3.1.0",
     "rehype-parse": "^7.0.1",
@@ -116,6 +117,7 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
+    "@types/react-modal": "^3.12.0",
     "babel-loader": "8.1.0",
     "benchmark": "2.1.4",
     "braces": "^3.0.2",
