--- a/.prettierignore
+++ b/.prettierignore
@@ -6,6 +6,9 @@ Dockerfile
 Makefile
 Procfile
 content/_all-titles.json
+_githistory.json
+/client/src/serviceWorker.js
+/fake-v1-api/*.json
 # exclude these directories
 /client/build/
 /ssr/dist/
@@ -22,6 +25,3 @@ content/_all-titles.json
 /testing/archivecontent/
 /kumascript/coverage/
 /ssr/mozilla.dnthelper.min.js
-
-# Misc files to ignore
-/client/src/serviceWorker.js
