--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@caporal/core": "2.0.2",
     "@fast-csv/parse": "4.3.6",
     "@mdn/browser-compat-data": "3.3.7",
+    "@stripe/stripe-js": "^1.15.0",
     "accept-language-parser": "1.5.0",
     "browser-specs": "^1.40.0",
     "chalk": "4.1.1",
