--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: mcr.microsoft.com/playwright:v1.10.0-focal
 
     steps:
       - uses: actions/checkout@v2.3.4
