--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test:client": "cd client && tsc --noEmit && react-scripts test --env=jest-environment-jsdom-sixteen",
     "test:content": "jest content",
     "test:kumascript": "jest kumascript",
-    "test:testing": "cd testing && jest",
+    "test:testing": "cd testing && jest && playwright test **/*.playwright.test.js",
     "tool": "node tool/cli.js",
     "watch:ssr": "cd ssr && webpack --mode=production --watch",
     "prepare": "husky install"
@@ -107,6 +107,7 @@
     "@babel/core": "^7.14.6",
     "@mdn/dinocons": "^0.3.2",
     "@mdn/minimalist": "^1.0.1",
+    "@playwright/test": "^1.12.3",
     "@storybook/addon-a11y": "^6.2.9",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
@@ -146,6 +147,7 @@
     "jsdom": "^16.6.0",
     "node-dev": "7.0.0",
     "pegjs": "^0.10.0",
+    "playwright": "^1.12.3",
     "prettier": "2.3.1",
     "prettier-plugin-packagejson": "^2.2.11",
     "pretty-quick": "3.1.0",
