upload built docs

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -68,3 +68,8 @@ jobs:
           # Also note that `--runInBand` is the same as `--maxWorkers=1`
 
           ./testing/scripts/functional-test.sh --runInBand
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: built-test-docs
+          path: ./build/en-us
