--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -72,7 +72,6 @@ jobs:
       - uses: actions/upload-artifact@v2
         if: always()
         with:
-          name: built-test-docs
+          name: screenshot
           path: |
-            ./client/build/en-us
             ./testing/grid.png
