--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -110,11 +110,6 @@ jobs:
           echo "log_each_successful_upload: ${{ github.event.inputs.log_each_successful_upload }}"
           echo "deployment_prefix: ${{ github.event.inputs.deployment_prefix }}"
 
-      - name: Fetch and load latest popularities.json
-        env:
-          CONTENT_ROOT: ${{ github.workspace }}/mdn/content/files
-        run: yarn tool popularities
-
       - name: Build everything
         env:
           # Remember, the mdn/content repo got cloned into `pwd` into a
@@ -154,6 +149,11 @@ jobs:
           echo "CONTENT_ARCHIVED_ROOT=$CONTENT_ARCHIVED_ROOT"
           echo "CONTENT_TRANSLATED_ROOT=$CONTENT_TRANSLATED_ROOT"
           yarn prepare-build
+
+          # (July 15, 2021) This is a temporary solution. This should become an
+          # integrated part of 'prepare-build'.
+          # See https://github.com/mdn/yari/issues/4217
+          yarn tool popularities
 
           yarn tool sync-translated-content
           yarn build
