--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ yarn-error.log*
 fake-v1-api/
 mdn-yari-*.tgz
 function.zip
+md-conversion-problems-report*.md
 
 testing/content/files/en-us/_githistory.json
 testing/translated-content/files/**/_githistory.json
