--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -47,8 +47,9 @@ jobs:
 
       - uses: actions/checkout@v2.3.4
         with:
-          repository: mdn/content
+          repository: fiji-flo/content
           path: mdn/content
+          ref: convert-js-to-markdown-2
           # Yes, this means fetch EVERY COMMIT EVER.
           # It's probably not sustainable in the far future (e.g. past 2021)
           # but for now it's good enough. We'll need all the history
