--- a/.github/workflows/stage-build.yml
+++ b/.github/workflows/stage-build.yml
@@ -166,6 +166,9 @@ jobs:
           # This enables the Plus call-to-action banner and the Plus landing page
           REACT_APP_ENABLE_PLUS: true
 
+          # This removes the ability to sign in
+          REACT_APP_DISABLE_AUTH: true
+
         run: |
           if [ ${{ env.BUILD_ARCHIVED_CONTENT }} == "true" ]; then
             echo "Will build mdn/archived-content too"
