--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -103,6 +103,8 @@ jobs:
           python --version
           poetry --version
 
+          exit 123
+
       - name: Print information about build
         run: |
           echo "notes: ${{ github.event.inputs.notes }}"
@@ -213,3 +215,15 @@ jobs:
           # (Or, make it an optional flag to the `update-lambda-functions` command)
 
           poetry run deployer search-index ../client/build
+
+      - name: Slack Notification
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_CHANNEL: mdn-notifications
+          SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
+          SLACK_ICON: https://avatars.slack-edge.com/2020-11-17/1513880588420_fedd7f0e9456888e69ff_96.png
+          SLACK_ICON_EMOJI: ":bell:"
+          SLACK_MESSAGE: "Dev build failed :collision:"
+          # SLACK_TITLE: Post Title
+          # SLACK_USERNAME: rtCamp
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
