--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -217,6 +217,7 @@ jobs:
           poetry run deployer search-index ../client/build
 
       - name: Slack Notification
+        if: failure()
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_CHANNEL: mdn-notifications
