--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -225,6 +225,6 @@ jobs:
           SLACK_ICON: https://avatars.slack-edge.com/2020-11-17/1513880588420_fedd7f0e9456888e69ff_96.png
           SLACK_ICON_EMOJI: ":bell:"
           SLACK_MESSAGE: "Dev build failed :collision:"
-          # SLACK_TITLE: Post Title
-          # SLACK_USERNAME: rtCamp
+          SLACK_TITLE: "Sample TItle here! :bell:"
+          SLACK_FOOTER: "Powered by dev-build.yml"
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
