Make popularities.json dynamic instead of checked into git
Part of #4217

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ testing/content/files/en-us/_githistory.json
 testing/translated-content/files/**/_githistory.json
 # eslintcache
 client/.eslintcache
+popularities.json
