--- a/.github/workflows/prod-build.yml
+++ b/.github/workflows/prod-build.yml
@@ -171,7 +171,7 @@ jobs:
           # See https://github.com/mdn/yari/issues/4217
           yarn tool popularities
 
-          yarn tool sync-translated-content
+          # yarn tool sync-translated-content
           yarn build
 
           du -sh client/build
