Revert "unbreak redirects (#4295)"
This reverts commit 6fdcf037a6be037593e6b9a5868fba527c891180.

--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -139,7 +139,7 @@ jobs:
           # See https://github.com/mdn/yari/issues/4217
           yarn tool popularities
 
-          # yarn tool sync-translated-content
+          yarn tool sync-translated-content
           yarn build
 
           # TODO: When the deployer is available this is where we
