--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "@babel/core": "^7.14.8",
     "@mdn/dinocons": "^0.3.2",
     "@mdn/minimalist": "^2.0.2",
+    "@playwright/test": "1.13.0",
     "@storybook/addon-a11y": "^6.3.4",
     "@storybook/addon-essentials": "^6.3.4",
     "@storybook/preset-create-react-app": "^3.2.0",
@@ -140,14 +141,12 @@
     "ignore-loader": "^0.1.2",
     "jest-environment-jsdom-sixteen": "^2.0.0",
     "jest-junit-reporter": "^1.1.0",
-    "jest-puppeteer": "5.0.4",
     "jsdom": "^16.6.0",
     "node-dev": "7.0.0",
     "pegjs": "^0.10.0",
     "prettier": "2.3.2",
     "prettier-plugin-packagejson": "^2.2.11",
     "pretty-quick": "3.1.1",
-    "puppeteer": "9.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-is": "^17.0.2",
