--- a/.github/workflows/pr-deployer.yml
+++ b/.github/workflows/pr-deployer.yml
@@ -18,12 +18,13 @@ jobs:
         with:
           python-version: "3.8"
 
-      - name: Load cached venv
-        id: cached-pip-cache
+      - name: Cache pip
         uses: actions/cache@v2.1.6
         with:
-          path: $(pip cache dir)
-          key: pipcache-${{ runner.os }}-${{ hashFiles('.github/workflows/pr-deployer.yml') }}
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('.github/workflows/pr-deployer.yml') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-${{ hashFiles('.github/workflows/pr-deployer.yml') }}
 
       - name: Debug pip cache dir
         run: |
