--- a/.github/workflows/pr-deployer.yml
+++ b/.github/workflows/pr-deployer.yml
@@ -18,11 +18,11 @@ jobs:
         with:
           python-version: "3.8"
 
-      # - name: Cache pip
-      #   uses: actions/cache@v2.1.6
-      #   with:
-      #     path: ~/.cache/pip
-      #     key: ${{ runner.os }}-pip-${{ hashFiles('.github/workflows/pr-deployer.yml') }}
+      - name: Cache pip
+        uses: actions/cache@v2.1.6
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('.github/workflows/pr-deployer.yml') }}
 
       # - name: Debug pip cache dir
       #   run: |
@@ -41,7 +41,6 @@ jobs:
           virtualenvs-create: true
           virtualenvs-in-project: true
           virtualenvs-path: deployer/.venv
-        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
 
       - name: Install deployer
         run: |
@@ -57,7 +56,6 @@ jobs:
 
       - name: Basic run of deployer
         run: |
-          source deployer/.venv/bin/activate
           cd deployer
           poetry run deployer --help
 
