--- a/.github/workflows/pr-deployer.yml
+++ b/.github/workflows/pr-deployer.yml
@@ -35,12 +35,16 @@ jobs:
           path: deployer/.venv
           key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}-${{ hashFiles('.github/workflows/pr-deployer.yml') }}
 
-      - name: Install Python poetry
-        uses: snok/install-poetry@v1.1.6
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-          virtualenvs-path: deployer/.venv
+      - name: Custom install Poetry
+        run: |
+          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
+
+      # - name: Install Python poetry
+      #   uses: snok/install-poetry@v1.1.6
+      #   with:
+      #     virtualenvs-create: true
+      #     virtualenvs-in-project: true
+      #     # virtualenvs-path: deployer/.venv
 
       - name: Install deployer
         run: |
