--- a/.github/workflows/pr-deployer.yml
+++ b/.github/workflows/pr-deployer.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Custom install Poetry
         run: |
           curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
+          poetry --version
 
       # - name: Install Python poetry
       #   uses: snok/install-poetry@v1.1.6
