--- a/.github/workflows/pr-deployer.yml
+++ b/.github/workflows/pr-deployer.yml
@@ -37,8 +37,8 @@ jobs:
 
       - name: Custom install Poetry
         run: |
-          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
-          poetry --version
+          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python - -y --path deployer/.venv
+          poetry version
 
       # - name: Install Python poetry
       #   uses: snok/install-poetry@v1.1.6
