--- a/.github/workflows/prod-build.yml
+++ b/.github/workflows/prod-build.yml
@@ -150,7 +150,7 @@ jobs:
           BUILD_SPEEDCURVE_LUX_ID: 108906238
 
           # This enables the Plus call-to-action banner and the Plus landing page
-          REACT_APP_ENABLE_PLUS: false
+          REACT_APP_ENABLE_PLUS: true
 
           # This removes the ability to sign in
           REACT_APP_DISABLE_AUTH: true
