actions/setup-node@v2 with yarn caching (#4111)

--- a/.github/workflows/pr-docs.yml
+++ b/.github/workflows/pr-docs.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/setup-node@v2.3.0
         with:
           node-version: "12"
+          cache: "yarn"
 
       - name: Lint markdown files
         run: |
