--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test:content": "jest content",
     "test:headless": "playwright test headless",
     "test:kumascript": "jest kumascript",
-    "test:testing": "cd testing && jest --rootDir ../testing",
+    "test:testing": "jest --rootDir testing",
     "tool": "node tool/cli.js",
     "watch:ssr": "cd ssr && webpack --mode=production --watch",
     "prepare": "husky install"
