--- a/.github/workflows/developing.yml
+++ b/.github/workflows/developing.yml
@@ -30,8 +30,8 @@ jobs:
 
       - name: Install all yarn packages
         if: steps.cached-node_modules.outputs.cache-hit != 'true'
-        env:
-          PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 1
+        # env:
+        #   PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 1
         run: |
           yarn --frozen-lockfile
 
@@ -74,9 +74,9 @@ jobs:
           TESTING_DEVELOPING: true
           # Use local chrome installs since we skip downloading it as part
           # of the yarn installs above
-          PUPPETEER_EXECUTABLE_PATH: /usr/bin/google-chrome
+          # PUPPETEER_EXECUTABLE_PATH: /usr/bin/google-chrome
         run: |
-          yarn test:testing developing
+          yarn test:developing
 
       - name: Debug server's stdout and stderr if tests failed
         if: failure()
