--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
   },
   "jest": {
     "testPathIgnorePatterns": [
-      "headless*",
-      "kumascript"
+      "headless*"
     ]
   },
   "resolutions": {
