--- a/.github/workflows/npm-published-simulation.yml
+++ b/.github/workflows/npm-published-simulation.yml
@@ -96,6 +96,7 @@ jobs:
           # on localhost:3000.
           # Testing that dev server is not relevant or important in this context.
           DEVELOPING_SKIP_DEV_URL: true
+          CONTENT_ROOT: mdn/content/files
         run: |
           yarn test:developing
 
